tests/errors/empty_prefix.error
parse error at line 1 column 1 for Verify:
"": command
^